After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791811 - festival: Forwarding duration query confuses wavparse
festival: Forwarding duration query confuses wavparse
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 791833
 
 
Reported: 2017-12-20 04:18 UTC by Nicolas Dufresne (ndufresne)
Modified: 2017-12-21 03:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
festival: Don't forward all queries (2.29 KB, patch)
2017-12-20 04:18 UTC, Nicolas Dufresne (ndufresne)
none Details | Review
festival: Don't forward all queries (2.29 KB, patch)
2017-12-20 18:52 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2017-12-20 04:18:30 UTC
The festival element let GstElement forward all queries. Whenver wavparse
query the duration , it get the duration of the text file, not a wavfile
which triggers an assertion and an integrer overflow:

ERROR:gstwavparse.c:1310:gst_wavparse_stream_headers: assertion failed: (upstream_size >= wav->offset)

The attached patch should work, but is only compule tested since Festival is broken on Fedora.
Comment 1 Nicolas Dufresne (ndufresne) 2017-12-20 04:18:34 UTC
Created attachment 365777 [details] [review]
festival: Don't forward all queries

This fixes issues where wavparse would query the file size upstream
and assert because the file size is way smaller then what the WAVE
header says. This patch disable or cane a handful of queries that
make no sense to forward.
Comment 2 Nicolas Dufresne (ndufresne) 2017-12-20 18:52:11 UTC
Created attachment 365799 [details] [review]
festival: Don't forward all queries

Updated to set the function on the srcpad as expected instead of the sinkpad.
Comment 3 Nicolas Dufresne (ndufresne) 2017-12-20 19:05:56 UTC
Attachment 365799 [details] pushed as 191c874 - festival: Don't forward all queries